# MTM-EX1

Dry task/: CMakeLists.txt  node.c
Dry task/BadCode/: CMakeLists.txt  badcode.c
Dry task/Hand-in/: dry.docx  ~$dry.docx
Election Test/: electionTests.c
Hand-in/: election.c  makefile
Map/: key.c  key.h
Smurfs/: CMakeLists.txt  election.c  election.h  electionTests.c  map.h
map/: CMakeLists.txt  map.c
